# screenscribe

./: .env.example  .gitignore  .pre-commit-config.yaml  .screenscribe-verify.yml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  USAGE.md  pyproject.toml  semgrep.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy-site-production.yml  loctree-ci.yml  pages.yml  publish-pypi.yml  publish-testpypi.yml  stt-contract.yml
assets/brand/social/: README.md
docs/: ARCHITECTURE.md  COVERAGE_SCOPE.md  DEFINITION_OF_DONE.md  SHOWCASE.md  THIRD_PARTY_NOTICES.md  shared-shell.md
docs/team-workflow/: README.md  agent-handoff-template.md  public-private-boundary.md  release-checklist.md
examples/: README.md  example_report.json  example_transcript.vtt  generate_example.py  generate_hero.py
screenscribe/: __init__.py  __main__.py  analyze_server.py  api_utils.py  audio.py  bootstrap.py  checkpoint.py  cli.py  cli_estimate.py  cli_messages.py  cli_paths.py  cli_reporting.py  cli_serve.py  config.py  default_keywords.yaml  detect.py  image_utils.py  keywords.py  preprocess.py  prompts.py  review_pipeline.py  review_server.py  screenshots.py  semantic_filter.py  server_common.py  server_security.py  summary_fallback.py  text_similarity.py  transcribe.py  transcribe_types.py  unified_analysis.py  validation.py  vtt_generator.py  work_item.py
screenscribe/html_pro/: __init__.py  assets.py  data.py  renderer.py
screenscribe/html_pro_assets/scripts/: analyze_dashboard.js  i18n.js  review_app.js  video_player.js
screenscribe/html_pro_assets/scripts/lib/: language-control.js  stt-transport.js  tab-keyboard.js
screenscribe/html_pro_assets/styles/: analyze_dashboard.css  report-pro.css  screenscribe-theme.css  screenscribe-theme.polish.css
screenscribe/html_pro_assets/templates/: shell.html
screenscribe/html_pro_assets/templates/partials/: capture_panel.html  export_panel.html  frame_modal.html  header_right.html  lightbox.html  manual_frame_modal.html  review_sidebar.html  sidebar_footer.html  tabbar.html  transcript_panel.html  video_panel.html  voice_notes_panel.html  window_actions.html
screenscribe/report/: __init__.py  console.py  data.py  html_report.py  json_report.py  markdown_report.py
screenscribe/shell/: __init__.py  demo_surface.py  renderer.py  surface.py
screenscribe/unified/: __init__.py  _console.py  analyze_one.py  dedup.py  finding.py  llm_merge.py  orchestrator.py  response_parsing.py  summaries.py  wire.py
scripts/: bump_version.sh  living-tree-commit.sh  release_artifacts_verify.py  ss_verify.py
site/: app.js  index.html  landing.css  robots.txt  sitemap.xml  styles.css
site/assets/: site.webmanifest
site/demo/: report.html
tests/: __init__.py  _review_dom.js  conftest.py  race_protection_test.sh  test_analyze_one_stream.py  test_analyze_server_default_ci.py  test_analyze_server_frame_preview.py  test_analyze_server_i18n.py  test_analyze_server_keywords.py  test_analyze_server_markdown_report.py  test_analyze_server_marker_actions.py  test_analyze_server_resilience.py  test_analyze_server_stt.py  test_analyze_server_tempdir_cleanup.py  test_analyze_voice_recorder.py  test_api_utils.py  test_audio.py  test_audio_chunking.py  test_audio_normalize.py  test_audio_quality_guard.py  test_bootstrap.py  test_branding_guard.py  test_checkpoint_atomic.py  test_checkpoint_serialization.py  test_cli_contracts.py  test_cli_ergonomics.py  test_cli_keywords_group.py  test_cli_review_core.py  test_cli_transcript_hallucination_filter.py  test_cli_validation_ux.py  test_config_env.py  test_config_persistence.py  test_config_vtt.py  test_default_model_docs_truth.py  test_design_tokens_single_source.py  test_detect.py  test_example_report_fields.py  test_f0_analyze_dashboard_smoke.py  test_f0_bh10_mark_idempotency.py  test_f0_bh11_voicenote_lifecycle.py  (+80 more)
tests/e2e/: __init__.py  conftest.py  test_analyze_note_space.py  test_review_browser_runtime.py  test_review_cross_tab.py  test_review_decision_persistence.py  test_review_layout_manual_frame.py  test_review_propagation_gate.py  test_sidebar_resize.py  test_smoke_no_api.py
