[project]
name = "screenscribe"
version = "0.1.16"
description = "Turn screen recordings into actionable engineering reports — narrated screencast review (STT → LLM → VLM)"
readme = "README.md"
requires-python = ">=3.11"
license = "BUSL-1.1"
license-files = ["LICENSE"]
keywords = ["video", "review", "automation", "ai", "vlm", "qa", "testing"]
authors = [
    { name = "Vetcoders", email = "hello@vetcoders.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27.0",
    "markdown-it-py>=3.0.0",
    "pydantic>=2",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    # Analyze mode server
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
]

[project.urls]
Homepage = "https://github.com/vetcoders/screenscribe"
Repository = "https://github.com/vetcoders/screenscribe"
Documentation = "https://github.com/vetcoders/screenscribe/blob/main/README.md"
Showcase = "https://github.com/vetcoders/screenscribe/blob/main/docs/SHOWCASE.md"
Issues = "https://github.com/vetcoders/screenscribe/issues"
Changelog = "https://github.com/vetcoders/screenscribe/blob/main/CHANGELOG.md"

[project.scripts]
screenscribe = "screenscribe.bootstrap:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["screenscribe"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.7.0",
    # Security static analysis: the ss-verify semgrep gate is fail-closed, so the
    # scanner must resolve via `uv run` in every dev/CI env. Pinned floor tracks
    # the .pre-commit-config.yaml hook (rev v1.146.0) so gate + pre-commit enforce
    # the SAME ruleset.
    "semgrep>=1.146.0",
    "types-pyyaml>=6.0.0",
    "detect-secrets>=1.5.0",
    "playwright>=1.60.0",
]

# Ruff - replaces black, isort, flake8, bandit
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert used (ok in tests)
    "S603",  # subprocess without shell=True is SAFE (we use ffmpeg)
    "RUF013",  # implicit Optional - typer uses this pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
# E2E harness spawns trusted dev tooling (uv/ffmpeg) by name and probes a
# localhost http URL — both are safe in this test-only context.
"tests/e2e/*" = ["S101", "S607", "S310"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy - type checking
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "integration: marks tests that require external API access (LIBRAXIS_API_KEY)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks end-to-end tests (installed wheel + real browser; opt in with --run-e2e)",
    "browser: marks tests that drive a real browser via Playwright",
    "requires_playwright: marks tests that require the playwright package + cached Chromium",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    # starlette 1.2's TestClient flags httpx usage via StarletteDeprecationWarning,
    # which subclasses UserWarning (not DeprecationWarning) so the line above misses
    # it. Transitional upstream warning from fastapi.testclient, not our code; drop
    # once fastapi/starlette settle the httpx2 migration.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

# Coverage — floor ratchet (W1B-10). Measured 82% under `-m "not integration"`;
# fail_under sits 2pts below as a regression floor. Raise it as coverage climbs.
[tool.coverage.run]
source = ["screenscribe"]
branch = false

[tool.coverage.report]
fail_under = 80
show_missing = true

# Bandit - security linter
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B311", "B404", "B603"]  # assert, random, subprocess import, subprocess call
